首页导航栏与歌单页装饰

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -11,11 +11,7 @@
     "audio"
   ],
   "window": {
-    "backgroundColor": "#F6F6F6",
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#d43c33",
-    "navigationBarTitleText": "CloudMusic",
-    "navigationBarTextStyle": "white"
+    "navigationStyle": "custom"  
   },
   "tabBar": {
     "color": "#474747",
